@@ -1435,7 +1435,7 @@ FFN(siLreset_gbc_count)(void) {
   check_arg(0);
   
   for (i = 0;  i < (int)t_other;  i++)
-    tm_table[i].tm_gbccount = tm_table[i].tm_adjgbccnt = 0;
+    tm_table[i].tm_gbccount = tm_table[i].tm_adjgbccnt = tm_table[i].tm_opt_maxpage = 0;
 }
 
 /* copy S bytes starting at P to beyond rb_pointer1 (temporarily)
